// smartcontract.proto
syntax = "proto3";

package api;

service SmartContract {
    rpc Call(SmartContractInput) returns (SmartContractResult) {}
}

message SmartContractInput {
    string uri = 1;
    string entry_func = 2;
}

message SmartContractResult {
    bool ok = 1;
    string result = 2;
}
